--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-<html><head><title>C:\Users\Nathoum\Downloads\autoconnect</title></head><body><a href="index.html.html">index.html</a><br /></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Autoconnect</title>
+    <!-- Pour le responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Description du site -->
+    <meta name="description" content="Autoconnect">
+    <!-- Mots-clés (SEO, de moins en moins utilisés mais parfois utiles) -->
+    <meta name="keywords" content="autoconnect, connexion automatique, application, simplification">
+    <!-- Auteur -->
+    <meta name="author" content="Autoconnect">
+    <!-- Couleur du thème sur mobile -->
+    <meta name="theme-color" content="#0d6efd">
+    <!-- Open Graph (pour le partage sur réseaux sociaux) -->
+    <meta property="og:title" content="Autoconnect">
+    <meta property="og:description" content="Autoconnect">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ton-site.fr/">
+    <meta property="og:image" content="https://ton-site.fr/images/preview.png">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Autoconnect">
+    <meta name="twitter:description" content="Voitures télécommander">
+    <meta name="twitter:image" content="https://ton-site.fr/images/preview.png">
+    <!-- Styles css -->
+    <!--<link rel="stylesheet" href="./css/reset.css">-->
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"/>
+</head>
+<body>
+<head>
+    <div class="navbar">
+        <a href="#home">Autoconnect</a>
+        <div class="subnav">
+            <button class="subnavbtn">Présentation <i class="fa fa-caret-down"></i></button>
+            <div class="subnav-content">
+                <a href="#company">Qui sommes-nous ?</a>
+                <a href="#team">Pourquoi nous ?</a>
+                <a href="#careers">C'est quoi Autoconnect ?</a>
+            </div>
+        </div>
+
+        <a href="#controller">Controller</a>
+
+        <a href="#contact">Contact</a>
+
+    </div>
+    <div style="padding:0 32px">
+        <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
+        <p>Hover over the "about", "services" or "partners" link to see the sub navigation menu.</p>
+    </div>
+</head>
+
+<h2 class="partners"></h2>
+<img class="partners" src="https://github.com/Luxinenglish/img-bank/blob/main/Blue%20Gradient%20Cybersecurity%20Logo.png?raw=true">
+
+<h3>C'est quoi Autoconnect ?</h3>
+
+</body>
+</html>
