--- a/autoconect test.html
+++ b/autoconect test.html
@@ -22,7 +22,7 @@
     <meta name="twitter:title" content="Autoconnect">
     <meta name="twitter:description" content="Voitures télécommandées">
     <meta name="twitter:image" content="https://ton-site.fr/images/preview.png">
-    <!-- Styles CSS -->
+    <!-- Styles css -->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"/>
 </head>
