Ajout du controler

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="navbar">
         <a href="#home">Autoconnect</a>
         <div class="subnav">
-            <button class="subnavbtn">Présentation <i class="fa fa-caret-down"></i></button>
+            <button class="subnavbtn">Présentation </i></button>
             <div class="subnav-content">
                 <a href="#company">Qui sommes-nous ?</a>
                 <a href="#team">Pourquoi nous ?</a>
