--- a/pages/controller.html
+++ b/pages/controller.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Controller</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <h1>Bienvenue sur la page Controller</h1>
 <p>Cette page est reliée au site principal.</p>
-<a href="index.html">Retour à l’accueil</a>
+<a href="/index.html">Retour à l’accueil</a>
 </body>
 </html>
