--- a/index.html
+++ b/index.html
@@ -31,21 +31,19 @@
 </head>
 <body>
 <head>
+
     <div class="navbar">
         <a href="#home">Autoconnect</a>
         <div class="subnav">
-            <button class="subnavbtn">Présentation </i></button>
+            <button class="subnavbtn">Présentation <i class="fa fa-caret-down"></i></button>
             <div class="subnav-content">
-                <a href="#company">Qui sommes-nous ?</a>
-                <a href="#team">Pourquoi nous ?</a>
-                <a href="#careers">C'est quoi Autoconnect ?</a>
+                <a href="#company">Company</a>
+                <a href="#team">Team</a>
+                <a href="#careers">Careers</a>
             </div>
         </div>
-
-        <a href="#controller">Controller</a>
-
+        <a href="#news">Controller</a>
         <a href="#contact">Contact</a>
-
     </div>
     <div style="padding:0 32px">
         <h3>Subnav/dropdown menu inside a Navigation Bar</h3>
